[package]
name = "core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
rustc_version = "0.4"


[dependencies]
flutter_rust_bridge = "=2.5.1"
anyhow = "*"
lazy_static = "*"
url = "*"

tokio = { version = "1.41.0", features = ["test-util", "full"] }
futures-util = "0.3.31"

[dependencies.reqwest]
version = "0.12.8"
default-features = false
features = ["rustls-tls", "json", "stream", "http2"]

[dependencies.serde_json]
version = "1.0.132"

[dependencies.serde]
version = "1.0.213"
features = ["derive"]
